# Snake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: defs.h  draw.h  food.h  init.h  input.h  snake_utils.h  structs.h
src/: defs.h  draw.c  draw.h  food.c  init.c  input.c  main.c  main.h  snake.c  snake.h  snake_utils.c  structs.h
